crates/lmpdf-sys/tests/ui/invalid_since_version.rs
lmpdf_sys_macros::pdfium_ffi! {
    #[since(9999)]
    fn Foo();
}

fn main() {}
